--- a/templates/base.html
+++ b/templates/base.html
@@ -12,20 +12,8 @@
 
     {% block head %}
 
-    <!-- Style sheets import -->
-    <link rel="stylesheet" href="{{ url_for('static', path='plugins/font-awesome/css/font-awesome.min.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', path='plugins/bootstrap4/css/bootstrap.min.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', path='plugins/owl-carousel/assets/owl.carousel.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', path='plugins/slick/slick/slick.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', path='plugins/lightGallery-master/dist/css/lightgallery.min.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', path='plugins/jquery-bar-rating/dist/themes/fontawesome-stars.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', path='plugins/jquery-ui/jquery-ui.min.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', path='plugins/select2/dist/css/select2.min.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', path='plugins/chikery-icon/style.css')}}">
-
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="{{ url_for('static', path='css/style.css')}}">
-    <link href="{{ url_for('static', path='css/custom.css') }}" rel="stylesheet">
+        <!-- Style sheets import -->
+        {% include 'libs/style.html' %}
 
     {% endblock %}
 
@@ -40,29 +28,11 @@
 
     {% include 'components/footer.html' %}
 
-    <!-- {{ url_for('static', path='plugins')}}-->
+
     {% block scripts %}
 
-    <script src="{{ url_for('static', path='plugins/jquery-1.12.4.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/owl-carousel/owl.carousel.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/bootstrap4/js/bootstrap.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/imagesloaded.pkgd.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/masonry.pkgd.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/isotope.pkgd.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/jquery.matchHeight-min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/slick/slick/slick.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/jquery-bar-rating/dist/jquery.barrating.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/slick-animation.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/lightGallery-master/dist/js/lightgallery-all.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/jquery-ui/jquery-ui.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/sticky-sidebar/dist/sticky-sidebar.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/jquery.slimscroll.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/select2/dist/js/select2.full.min.js')}}"></script>
-    <script src="{{ url_for('static', path='plugins/gmap3.min.js')}}"></script>
-
-    <!-- Custom scripts-->
-    <script src="{{ url_for('static', path='js/main.js') }}"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxflHHc5FlDVI-J71pO7hM1QJNW1dRp4U&amp;region=GB"></script>   
+        <!-- Scripts sheets import -->
+        {% include 'libs/scripts.html' %}
 
     {% endblock %}
 
