--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -14,9 +14,9 @@
         </div>
         <div class="ps-footer__center">
           <div class="ps-site-info"><a class="ps-logo" href="#"><img src="{{ url_for('static', path='img/logo.png')}}" alt="" width="304" height="218"></a>
-            <p>004 Riley Street, Surry Hills 2050 Sydney, Australia</p>
-            <p>Email:<a href="#"> <span class="__cf_email__" data-cfemail="523b3c343d123c3d27263a373f37217c313d3f">[email&#160;protected]</span></a></p>
-            <p>Phone:<span class="ps-hightlight"> +455 45 454555</span></p>
+            <p>303/3, Ann's Kitchen, Jayapura, Hingurakgoda, Sri Lanka</p>
+            <p>Email:<a href="#"> <span class="__cf_email__" data-cfemail="523b3c343d123c3d27263a373f37217c313d3f">piyumizoysa18@gmail.com</span></a></p>
+            <p>Phone:<span class="ps-hightlight"> 070 296 3037</span></p>
           </div>
         </div>
         <div class="ps-footer__right">
