--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,6 @@
 {% extends "base.html"  %}
 
 {% block content %}
-<h1>
-    Welcome to Ann's Kitchen
-</h1>
+    <h2>Anss Kitchen</h2>
 {% endblock %}
 
