Added sample photos

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,70 @@
 {% extends "base.html"  %}
 
 {% block content %}
-    <h2>Anss Kitchen</h2>
+<div class="container">
+    <div class="ps-product--detail">
+      <div class="ps-product__header">
+        <div class="ps-product__thumbnail" data-vertical="false">
+          <figure>
+            <div class="ps-wrapper"><span class="ps-badge ps-badge--sale"><i>30%</i></span>
+              <div class="ps-product__gallery" data-arrow="true">
+                <div class="item"><a href="{{ url_for('static', path='img/product/1.jpg') }}"><img src="{{ url_for('static', path='img/product/1.jpg') }}" alt=""></a></div>
+                <div class="item"><a href="{{ url_for('static', path='img/product/2.jpg') }}"><img src="{{ url_for('static', path='img/product/2.jpg') }}" alt=""></a></div>
+                <div class="item"><a href="{{ url_for('static', path='img/product/3.jpg') }}"><img src="{{ url_for('static', path='img/product/3.jpg') }}" alt=""></a></div>
+              </div>
+            </div>
+          </figure>
+          <div class="ps-product__variants" data-item="5" data-md="4" data-sm="4" data-arrow="false">
+            <div class="item"><img src="{{ url_for('static', path='img/product/1.jpg') }}" alt=""></div>
+            <div class="item"><img src="{{ url_for('static', path='img/product/2.jpg') }}" alt=""></div>
+            <div class="item"><img src="{{ url_for('static', path='img/product/3.jpg') }}" alt=""></div>
+          </div>
+        </div>
+        <div class="ps-product__info">
+          <h1>Party bun platter</h1>
+          <div class="ps-product__meta">
+            <div class="ps-product__rating">
+              <select class="ps-rating" data-read-only="true">
+                <option value="1">1</option>
+                <option value="1">2</option>
+                <option value="1">3</option>
+                <option value="1">4</option>
+                <option value="2">5</option>
+              </select>
+            </div>
+          </div>
+          <h4 class="ps-product__price sale">
+            <del> Rs. 1200.00</del> Rs 1000.00
+          </h4>
+          <div class="ps-product__desc">
+            <p>Hendrerit ac nisi Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit duis lacus urna hendrerit ac nisi.</p>
+            <p>Curabitur sed turpis feugiat, mollis felis vel, viverra metus. Sed vel nulla non neque dictum imperdiet. Aliquam egestas hendrerit.</p>
+          </div>
+          <div class="ps-product__specification">
+            <p><strong>Expire Date:</strong> 1 day within purchase</p>
+            <p><strong>AVAILABILITY:</strong>InStock</p>
+            <p><strong> CATEGORIES:</strong><a href="shop-default.html">Cupke Sugar</a></p>
+          </div>
+          <div class="ps-product__shopping">
+            <select class="ps-select" title="Choose Size">
+              <option value="1">Small</option>
+              <option value="2">Medium</option>
+              <option value="3">Large</option>
+            </select>
+            <div class="form-group--number">
+              <button class="up"></button>
+              <button class="down"></button>
+              <input class="form-control" type="text" placeholder="1">
+            </div><a class="ps-btn" href="shopping-cart.html">Order now</a>
+            <div class="ps-product__actions"><a href="#"><i class="icon-heart"></i></a><a href="#"><i class="icon-chart-bars"></i></a></div>
+          </div>
+          <div class="ps-product__sharing">
+            <div class="ps-product__actions"><a href="#"><i class="fa fa-heart-o"></i></a><a href="#"><i class="fa fa-random"></i></a></div>
+            <p>Share This:<a class="facebook" href="#"><i class="fa fa-facebook"></i></a><a class="twitter" href="#"><i class="fa fa-twitter"></i></a><a class="google" href="#"><i class="fa fa-google-plus"></i></a><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
 {% endblock %}
 
