Replaced link navigations to Title

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,15 +1,14 @@
 <header class="header header--default header--home-4 line" data-sticky="true">
     <div class="header__left">
       <ul class="ps-list--social">
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100072035782760" target="_blank"><i class="fa fa-facebook"></i></a></li>
         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
       </ul>
     </div>
     <div class="header__center">
       <nav class="header__navigation left">
-        <ul class="menu">
+        <!-- <ul class="menu">
           <li class="menu-item-has-children"><a href="index-2.html">Home</a><span class="sub-toggle"><i class="fa fa-angle-down"></i></span>
             <ul class="sub-menu">
               <li class="current-menu-item "><a href="index-2.html">Homepage 1</a>
@@ -60,11 +59,12 @@
           </li>
           <li class="current-menu-item "><a href="about-us.html">About</a>
           </li>
-        </ul>
-      </nav>
-      <div class="header__logo"><a class="ps-logo" href="index-2.html"><img src="{{ logo }}" alt=""></a></div>
+        </ul> -->
+        <h1 style="font-family: cursive;">Ann's</h1>
+    </nav>
+      <div class="header__logo"><a class="ps-logo" href="#"><img src="{{ logo }}" alt=""></a></div>
       <nav class="header__navigation right">
-        <ul class="menu">
+        <!-- <ul class="menu">
           <li class="menu-item-has-children"><a href="about-us.html">Pages</a><span class="sub-toggle"><i class="fa fa-angle-down"></i></span>
             <ul class="sub-menu">
               <li class="current-menu-item "><a href="about-us.html">About</a>
@@ -91,8 +91,9 @@
           </li>
           <li class="current-menu-item "><a href="contact-us.html">Contact</a>
           </li>
-        </ul>
-      </nav>
+        </ul> -->
+        <h1 style="font-family: cursive;">Kitchen</h1>
+    </nav>
     </div>
     <div class="header__right">
       <div class="header__actions"><a class="ps-search-btn" href="#"><i class="fa fa-search"></i></a><a href="#"><i class="fa fa-heart-o"></i></a>
